change package json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "wine-select-ui",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/wineselect",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
